<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_big"
        android:src="@drawable/menu_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/logInTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_big"
        android:text="@string/fragment_home_logged_in_placeholder"
        android:textAppearance="?attr/textAppearanceLabelMedium"
        app:layout_constraintBottom_toBottomOf="@id/menuButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/menuButton"
        tools:text="@string/fragment_home_log_in" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/recipeTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_xbig"
        android:text="@string/fragment_home_headline"
        android:textAppearance="?attr/textAppearanceHeadlineSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menuButton" />

    <View
        android:id="@+id/searchBarPlaceholder"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="?attr/colorSurfaceVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipeTitleTextView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/recipesLabelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_big"
        android:text="@string/fragment_home_label"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchBarPlaceholder" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/randomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_medium"
        android:backgroundTint="?attr/colorSecondary"
        android:text="@string/fragment_home_random"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipesLabelTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>
